VSE: using python to remove a scene strip with effect applied causes... weirdness #73828

Closed
opened 2020-02-15 09:18:15 +01:00 by hudson barkley · 14 comments

Blender Version
Broken: 2.81a

Short description of error
when a strip is removed using the python code:

bpy.context.scene.sequence_editor.sequences.remove(strip)

any effect strips that are, or WERE recently applied to this strip will behave in very strange ways -
Single-input effects like speed control can behave as if they were applied to two strips, or just jump around
double-input effects like crossfade can rapidly jump between multiple other strips as if they cant make up their mind which strip it is applied to.

Exact steps for others to reproduce the error
Ive included a test .blend file, there are two python scripts included, both operate on a currently selected strip, run them while various color strips are selected to see the strange things the effects do.

The bottom script will just remove whatever strip is currently selected.
Try using this to remove the red color strip, then grab the green color strip and move it around, blender will crash after a bit of movement (usually).
Try using this to remove the black color strip, the speed control will... uhh, do weird stuff.

The top script will add a new strip, move the effects on the active strip to that, then delete the active strip. Somehow this still causes problems, even tho the strip that was removed now has no effects applied to it.
Try running this on the green color strip, it will cause an instant crash if the new strip is moved
Try running this on the green color strip, then moving the cursor, then moving the new strip, the left crossfade will switch between multiple inputs
Try running this on the black color strip, the speed control will behave very odd, but in a different way.

Some very weird stuff will happen randomly if you replace multiple strips too, ive seen the speed control start thinking its a crossfade...

vse strip remove test.blend

**Blender Version** Broken: 2.81a **Short description of error** when a strip is removed using the python code: ``` bpy.context.scene.sequence_editor.sequences.remove(strip) ``` any effect strips that are, or WERE recently applied to this strip will behave in very strange ways - Single-input effects like speed control can behave as if they were applied to two strips, or just jump around double-input effects like crossfade can rapidly jump between multiple other strips as if they cant make up their mind which strip it is applied to. **Exact steps for others to reproduce the error** Ive included a test .blend file, there are two python scripts included, both operate on a currently selected strip, run them while various color strips are selected to see the strange things the effects do. The bottom script will just remove whatever strip is currently selected. Try using this to remove the red color strip, then grab the green color strip and move it around, blender will crash after a bit of movement (usually). Try using this to remove the black color strip, the speed control will... uhh, do weird stuff. The top script will add a new strip, move the effects on the active strip to that, then delete the active strip. Somehow this still causes problems, even tho the strip that was removed now has no effects applied to it. Try running this on the green color strip, it will cause an instant crash if the new strip is moved Try running this on the green color strip, then moving the cursor, then moving the new strip, the left crossfade will switch between multiple inputs Try running this on the black color strip, the speed control will behave very odd, but in a different way. Some very weird stuff will happen randomly if you replace multiple strips too, ive seen the speed control start thinking its a crossfade... [vse strip remove test.blend](https://archive.blender.org/developer/F8340978/vse_strip_remove_test.blend)
Author

Added subscriber: @snuq

Added subscriber: @snuq

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @iss

Added subscriber: @iss

@snuq did you intentionally made cross effects non-overlaping? It shouldn't work like this... Though we can make a feature out of this bug.

In any case, there are 4 bugs here it seems.

@snuq did you intentionally made cross effects non-overlaping? It shouldn't work like this... Though we can make a feature out of this bug. In any case, there are 4 bugs here it seems.
Author

In #73828#873175, @iss wrote:
@snuq did you intentionally made cross effects non-overlaping? It shouldn't work like this... Though we can make a feature out of this bug.

You sure about that not being an intended feature? It has worked that way as long as ive been using the vse. I use that method for crossfades about 90% of the time, keeps the timeline clean

> In #73828#873175, @iss wrote: > @snuq did you intentionally made cross effects non-overlaping? It shouldn't work like this... Though we can make a feature out of this bug. You sure about that not being an intended feature? It has worked that way as long as ive been using the vse. I use that method for crossfades about 90% of the time, keeps the timeline clean

In 2.79 it turns pink, not sure if it renders same as now...
I am fine with how it is now, but I think it works by accident.. it is still marked as invalid in C I think..

In 2.79 it turns pink, not sure if it renders same as now... I am fine with how it is now, but I think it works by accident.. it is still marked as invalid in C I think..

Added subscriber: @Sergey

Added subscriber: @Sergey
Richard Antalik was assigned by Sergey Sharybin 2020-06-12 13:33:54 +02:00

@iss, I see some patches related to this report. What the status here?

@iss, I see some patches related to this report. What the status here?

This issue was referenced by 47f98a38d0

This issue was referenced by 47f98a38d0f8a83648c13a54adc717d49d0898f1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

In #73828#952454, @Sergey wrote:
@iss, I see some patches related to this report. What the status here?

Sorry I missed your question. I was getting patches to be reviewed. There is still 1 crashy aspect to this report so I wil reconfirm and will have to update patch for this.

> In #73828#952454, @Sergey wrote: > @iss, I see some patches related to this report. What the status here? Sorry I missed your question. I was getting patches to be reviewed. There is still 1 crashy aspect to this report so I wil reconfirm and will have to update patch for this.

This issue was referenced by 076d033e10

This issue was referenced by 076d033e10eee29bfc8315344bd2ba1f0951ad06

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:27:55 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73828
No description provided.